depois de algumas config do facesconfig

--- a/aulasjsfprimefaces/src/main/webapp/error/404.xhtml
+++ b/aulasjsfprimefaces/src/main/webapp/error/404.xhtml
@@ -15,9 +15,9 @@
 <h:form>
 	<h:body style="background-color:#f4f4f4; display:flex; align-items:center; justify-content:center; height:100vh;">
 
-	<p:panel id="painelNotAcess" header="Aviso" style="width:400px; text-align:center;"> 
-		<h:graphicImage library="img" name="acess_not.jpeg.jpg" width="100" style="margin-bottom:20px;">
-		<h:outputLabel value="Acesso não autorizado para seu usuário."/>
+	<p:panel id="painelPageNotFound" header="Aviso" style="width:400px; text-align:center;"> 
+		<h:graphicImage library="img" name="page_not_found.png" width="100" style="margin-bottom:20px;">
+		<h:outputLabel value="Página Não Encontrada. Verifique a URL"/>
 		</h:graphicImage>
 	</p:panel>
 	
