--- a/aulasjsfprimefaces/src/main/webapp/restrito/principal.xhtml
+++ b/aulasjsfprimefaces/src/main/webapp/restrito/principal.xhtml
@@ -5,18 +5,15 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:sec="http://www.springframework.org/security/tags"
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-
+	
 </h:head>
 
 
 <h:body>
-
-
-
+	Principal
 </h:body>
 
 </html>
