Antes do alterar senha

--- a/aulasjsfprimefaces/src/main/webapp/restrito/principal.xhtml
+++ b/aulasjsfprimefaces/src/main/webapp/restrito/principal.xhtml
@@ -7,13 +7,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 
-<h:head>
-	
-</h:head>
+<ui:composition template="/template/templatePrincipal.xhtml"></ui:composition>
 
-
-<h:body>
-	Principal
-</h:body>
-
+<ui:define name="corpo"></ui:define>
 </html>
